test/zinc_source/compile_errors/functions/07_missing_required_named.zn
// expected-error: missing required argument 'x'

fn add(x, y = 2) {
    return x + y
}

fn main() {
    add(y=3)
}
